feat: implement comprehensive multi-language speech recognition system
- Add React Native Voice integration with expo-dev-client support
- Implement 40+ language support with regional variants
- Create comprehensive speech recognition service with language switching
- Add language picker components and hooks for UI management
- Generate native iOS/Android directories with voice module support
- Configure EAS build system for development builds
- Add microphone permissions and native module configurations
- Create test components for multi-language speech recognition
- Fix gesture handler integration and dependency issues

--- a/app.json
+++ b/app.json
@@ -28,14 +28,33 @@
       },
       "edgeToEdgeEnabled": true,
       "permissions": [
-        "RECORD_AUDIO"
-      ]
+        "RECORD_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "RECORD_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ],
+      "package": "com.languageapp.tutor"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-av"
-    ]
+      "expo-dev-client",
+      "expo-av",
+      [
+        "@react-native-voice/voice",
+        {
+          "microphonePermission": "This app needs access to your microphone to practice pronunciation with the AI tutor.",
+          "speechRecognitionPermission": "This app uses speech recognition to analyze your pronunciation and provide feedback."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "9cca51ba-f32a-469a-bf0f-fe35d07d62a2"
+      }
+    }
   }
 }
