feat: Implement production-ready Supabase authentication with Apple Sign In and magic links
- 🔧 Fix Node.js v23 TypeScript compatibility with expo-wrapper.sh script
- 🍎 Implement Apple Sign In with native/web fallback for iOS simulator support
- 📧 Add passwordless magic link authentication with deep linking
- 🔐 Create comprehensive AuthProvider with session management
- 🏗️ Set up Supabase client with AsyncStorage persistence
- 📱 Configure deep linking scheme and associated domains
- 🗄️ Apply database migrations for user profiles with RLS policies
- 🛡️ Implement AuthGate for route protection
- 🎨 Create authentication screens (SignIn, EmailOTP modal)
- 🔗 Add proper redirect URL handling for OAuth flows
- 📦 Install required dependencies: supabase-js, async-storage, expo-web-browser
- ⚙️ Update package.json scripts to use compatibility wrapper
- 🏛️ Configure iOS entitlements and URL schemes for Apple Sign In
- 🧪 Add comprehensive TypeScript types for authentication state

Features implemented:
- Native Apple Sign In for physical devices
- Web-based Apple OAuth fallback for iOS Simulator
- Magic link email authentication with deep link handling
- Automatic profile creation and management
- Session persistence across app restarts
- Proper error handling and user feedback
- Production-ready authentication flow

--- a/app.json
+++ b/app.json
@@ -7,6 +7,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "scheme": "ai-language-tutor",
+    "associatedDomains": ["applinks:upusrhmodjdmwmhvqbtl.supabase.co"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -19,6 +21,9 @@
       "infoPlist": {
         "NSMicrophoneUsageDescription": "This app needs access to your microphone to practice pronunciation with the AI tutor.",
         "NSSpeechRecognitionUsageDescription": "This app uses speech recognition to analyze your pronunciation and provide feedback."
+      },
+      "entitlements": {
+        "com.apple.developer.applesignin": ["Default"]
       }
     },
     "android": {
@@ -42,6 +47,7 @@
     },
     "plugins": [
       "expo-dev-client",
+      "expo-apple-authentication",
       "expo-speech-recognition",
       [
         "@react-native-voice/voice",
