--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ai-language-tutor",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.tsx",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": " npx expo run:ios",
+    "web": "npx expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "type-check": "tsc --noEmit",
@@ -16,29 +16,42 @@
     "postinstall": "node scripts/fix-whisper-amx.js || true"
   },
   "dependencies": {
+    "@agentdeskai/browser-tools-mcp": "^1.2.1",
     "@expo/cli": "^0.24.13",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "@supabase/supabase-js": "2.39.0",
     "axios": "^1.9.0",
+    "buffer": "^6.0.3",
     "eas-cli": "^16.6.2",
+    "events": "^3.3.0",
     "expo": "~53.0.9",
+    "expo-apple-authentication": "^7.2.4",
     "expo-av": "^15.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "^18.1.10",
+    "expo-linking": "^7.1.5",
+    "expo-secure-store": "^14.2.3",
     "expo-speech": "^13.1.7",
     "expo-speech-recognition": "^2.0.0",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.1.6",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-reanimated": "3.18.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.12.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "whisper.rn": "^0.4.0-rc.12"
   },
   "devDependencies": {
@@ -62,6 +75,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
+    "tsx": "^4.19.4",
     "typescript": "~5.8.3"
   },
   "private": true
