--- a/ios/AILanguageTutor/Info.plist
+++ b/ios/AILanguageTutor/Info.plist
@@ -4,6 +4,8 @@
   <dict>
     <key>CADisableMinimumFrameDurationOnPhone</key>
     <true/>
+    <key>CFBundleAllowMixedLocalizations</key>
+    <true/>
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
@@ -28,11 +30,6 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>ai-language-tutor</string>
-        </array>
-      </dict>
-      <dict>
-        <key>CFBundleURLSchemes</key>
-        <array>
           <string>com.languageapp.tutor</string>
         </array>
       </dict>
