--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "@agentdeskai/browser-tools-mcp": "^1.2.1",
     "@expo/cli": "^0.24.13",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-voice/voice": "^3.2.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
@@ -28,27 +27,25 @@
     "buffer": "^6.0.3",
     "eas-cli": "^16.6.2",
     "events": "^3.3.0",
-    "expo": "~53.0.9",
+    "expo": "53.0.20",
     "expo-apple-authentication": "^7.2.4",
-    "expo-av": "^15.1.4",
-    "expo-dev-client": "~5.1.8",
-    "expo-file-system": "^18.1.10",
-    "expo-linking": "^7.1.5",
+    "expo-audio": "^0.4.8",
+    "expo-dev-client": "~5.2.4",
+    "expo-file-system": "~18.1.11",
+    "expo-linking": "~7.1.7",
     "expo-secure-store": "^14.2.3",
-    "expo-speech": "^13.1.7",
-    "expo-speech-recognition": "^2.0.0",
     "expo-status-bar": "~2.2.3",
-    "expo-web-browser": "^14.1.6",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-crypto": "^2.2.0",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "3.18.0",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
@@ -73,6 +70,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
+    "react-test-renderer": "19.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
     "tsx": "^4.19.4",
