--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "events": "^3.3.0",
     "expo": "53.0.20",
     "expo-apple-authentication": "^7.2.4",
-    "expo-audio": "^0.4.8",
+    "expo-audio": "~0.4.8",
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
     "expo-linking": "~7.1.7",
