--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-file-system": "~18.1.11",
     "expo-linking": "~7.1.7",
     "expo-secure-store": "^14.2.3",
+    "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
