--- a/package.json
+++ b/package.json
@@ -13,50 +13,60 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "postinstall": "node scripts/fix-whisper-amx.js || true"
+    "generate-questions": "node scripts/generate-questions.js",
+    "import-archives": "node scripts/import-archives.js",
+    "import-top20": "node scripts/import-top20-languages.js",
+    "optimize-performance": "node scripts/apply-performance-optimization.js",
+    "cleanup": "node scripts/cleanup-database.js",
+    "reset-db": "node scripts/reset-and-curate.js",
+    "add-variety": "node scripts/add-multiple-choice.js",
+    "llm-mcq": "node scripts/llm-multiple-choice.js"
   },
   "dependencies": {
     "@agentdeskai/browser-tools-mcp": "^1.2.1",
+    "@aws-sdk/client-s3": "^3.859.0",
     "@expo/cli": "^0.24.13",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "@supabase/supabase-js": "2.39.0",
     "axios": "^1.9.0",
     "buffer": "^6.0.3",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.3",
     "eas-cli": "^16.6.2",
     "events": "^3.3.0",
-    "expo": "53.0.20",
+    "expo": "^53.0.19",
     "expo-apple-authentication": "^7.2.4",
     "expo-audio": "~0.4.8",
     "expo-dev-client": "~5.2.4",
     "expo-file-system": "~18.1.11",
+    "expo-linear-gradient": "~14.0.0",
     "expo-linking": "~7.1.7",
     "expo-secure-store": "^14.2.3",
-    "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
-    "expo-web-browser": "~14.2.0",
+    "expo-web-browser": "^14.1.6",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.2",
     "react-native-crypto": "^2.2.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-reanimated": "3.19.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-url-polyfill": "^2.0.0",
+    "sharp": "^0.34.3",
     "stream-browserify": "^3.0.0",
-    "util": "^0.12.5",
-    "whisper.rn": "^0.4.0-rc.12"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-flow": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
@@ -71,7 +81,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
-    "react-test-renderer": "19.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.4",
     "tsx": "^4.19.4",
